--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
 		"web": "expo start --web"
 	},
 	"dependencies": {
+		"@react-native-async-storage/async-storage": "^1.18.1",
 		"eslint": "^8.41.0",
 		"expo": "~48.0.15",
 		"expo-status-bar": "~1.4.4",
